[package]
name = "muni_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4.23"
clap = "4.4.6"
dotenvy = "0.15"
once_cell = "1.18.0"
poise = "0.5.5"
rand = { version = "0.8", features = ["std_rng"] }
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
surrealdb = "1.0.0"
thiserror = "1.0.50"
tokio = { version = "1.22", features = [ "full" ] }
twitch-irc = { version = "5.0", features = [ "refreshing-token-native-tls" ] }
twitch_oauth2 = "0.9"
url = "2.4.1"
