[package]
name = "muni_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = "4.4"
dotenvy = "0.15"
num-format = "0.4"
once_cell = "1.18"
poise = "0.6"
rand = { version = "0.8", features = ["std_rng"] }
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
surrealdb = "1.0"
thiserror = "1.0"
tokio = { version = "1.22", features = [ "full" ] }
tokio-tungstenite = { version = "0.20.1", features = [ "native-tls" ] }
twitch-irc = { version = "5.0", features = [ "refreshing-token-native-tls" ] }
twitch_oauth2 = "0.12"
url = "2.4"
