[package]
name = "muni_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
decancer = "3.2.4"
dotenvy = "0.15"
env_logger = "0.11.3"
humantime = "2.1.0"
log = "0.4.21"
num-format = "0.4"
once_cell = "1.18"
poise = { version = "0.6", features = ["cache"] }
rand = { version = "0.8", features = ["std_rng"] }
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
surrealdb = "2.0"
thiserror = "1.0"
tokio = { version = "1.22", features = [ "full" ] }
tokio-tungstenite = { version = "0.20.1", features = [ "native-tls" ] }
toml = "0.8.12"
twitch-irc = { version = "5.0", features = [ "refreshing-token-native-tls" ] }
twitch_api = { version = "0.7.0-rc.7", features = ["client", "helix", "eventsub", "hmac", "reqwest"] }
twitch_oauth2 = "0.12"
url = "2.4"
